Scrollbar color fixed

--- a/src/style.css
+++ b/src/style.css
@@ -278,3 +278,17 @@ opacity: 100;
   height: 50px;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+} 
+::-webkit-scrollbar-thumb {
+  background: #777; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #222; 
+}   
+::-webkit-scrollbar-track {
+  background: #ddd; 
+  border-radius: 10px;
+}
